--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "init": "npm install --init",
         "clean": "rm -rf azad*.zip build/* build-node/*",
         "build": "node utils/build.js",
+        "watch": "node utils/build.js --watch",
         "doc": " typedoc --out ./doc/ ./src/js/",
         "lint": "tsc --strict --alwaysStrict --noEmit --noUnusedParameters --noImplicitReturns --noImplicitOverride --noImplicitThis --noFallthroughCasesInSwitch",
         "eslint": "eslint --ignore-path .gitignore --ext .js,.ts .",
@@ -25,6 +26,8 @@
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^6.5.0",
         "@typescript-eslint/parser": "^6.5.0",
+        "assert": "^2.1.0",
+        "buffer": "^6.0.3",
         "clean-webpack-plugin": "^4.0.0",
         "copy-webpack-plugin": "^11.0.0",
         "crypto-browserify": "^3.12.1",
@@ -33,12 +36,17 @@
         "file-loader": "^6.2.0",
         "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.5.1",
+        "path-browserify": "^1.0.1",
+        "process": "^0.11.10",
+        "stream-browserify": "^3.0.0",
         "style-loader": "^3.3.2",
         "ts-loader": "^9.4.2",
         "typedoc": "^0.24.6",
         "typescript": "^5.0.4",
+        "util": "^0.12.5",
+        "vm-browserify": "^1.1.2",
         "webpack": "^5.81.0",
-        "webpack-cli": "^5.0.2",
+        "webpack-cli": "^6.0.1",
         "write-file-webpack-plugin": "^4.5.1"
     },
     "dependencies": {
@@ -49,17 +57,27 @@
         "@types/sprintf-js": "^1.1.2",
         "@types/webpack": "^5.28.1",
         "azad": "file:",
+        "browserify-zlib": "^0.2.0",
+        "canvas": "^2.11.2",
         "datatables": "^1.10.18",
         "extpay": "^3.0.7",
+        "https-browserify": "^1.0.0",
         "jquery": "^3.6.4",
         "jsdom": "^21.1.1",
         "lzjs": "^1.3.0",
         "mocha": "^10.2.0",
         "moment": "^2.29.4",
+        "os-browserify": "^0.3.0",
         "serialize-javascript": "^6.0.1",
         "sprintf-js": "^1.1.2",
         "sprintf.js": "^0.1.4",
+        "stream-http": "^3.2.0",
         "tsc": "^2.0.4",
+        "url": "^0.11.4",
         "xpath": "0.0.32"
+    },
+    "optionalDependencies": {
+        "bufferutil": "^4.0.9",
+        "utf-8-validate": "^6.0.5"
     }
 }
